dashboard layout responsivity

--- a/src/app/features/dashboard/layout/header/header.component.html
+++ b/src/app/features/dashboard/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
 
-  <button mat-icon-button [class.hidden]="false">
+  <button mat-icon-button (click)="toggleMenu()">
     <mat-icon class="menuToggle">menu</mat-icon>
   </button>
 
