--- a/src/app/features/dashboard/layout/layout.component.html
+++ b/src/app/features/dashboard/layout/layout.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="content" fxLayout="row" fxFlex="grow" fxLayoutGap="4px">
-    <div class="sideBar">
+    <div class="sideBar" [class.hidden]="!(showMenu$ | async)">
       <app-sidebar></app-sidebar>
     </div>
 
