--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
 
 a{
